frontend/src/theme/hoteltheme.css
.background {
  color: #000000;
}

.content-background {
  background: rgb(41, 36, 36);
}

.page-wrapper {
  padding: 16px;
}

.button-group {
  display: flex;
  gap: 16px;
  margin: 15px 15px 15px 0px;
}

.hero {
  text-align: center;
}

.info-box {
  padding: 5px 30px 30px 30px;
  margin-bottom: 20px;
  margin-top: 30px;
  border-radius: 16px;
  box-shadow: 0 5px 20px rgba(31, 30, 29, 0.1);
  color: #ffffff;
}

.btn {
  margin-right: 15px;
  text-decoration: none;
  color: var(--ion-color-primary);
}

/* Slideshow */

* {
  box-sizing: border-box;
}

.mySlides {
  display: block;
}

img {
  vertical-align: middle;
  border-radius: 12px;
}

.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
  margin-top: 20px;
}

.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  padding: 16px;
  margin-top: -22px;
  color: rgb(0, 0, 0);
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
}

.next {
  right: 0;
}

.prev:hover,
.next:hover {
  background-color: rgba(255, 255, 255, 0.8);
}

.text {
  color: #ffffff;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

.numbertext {
  color: #ffffff;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 10px 2px;
  background-color: #717171;
  border-radius: 50%;
  display: inline-block;
}

.active,
.dot:hover {
  background-color: #bbb;
}

.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

.footer-content {
  color: white;
  padding: 15px;
}

.margin-left-15 {
  margin-left: 15px;
}

@keyframes fade {
  from {
    opacity: .4
  }

  to {
    opacity: 1
  }
}

